fix(form):align loader button to right for design consitency

--- a/assets/src/css/frontend/forms.scss
+++ b/assets/src/css/frontend/forms.scss
@@ -835,14 +835,14 @@ Button with Loader
 		// Align loading icon with button text.
 		position: relative;
 		top: 3px;
-		float: left;
+		float: right;
 
 		@include iconstyle();
 		height: 16px;
 		width: 16px;
 		line-height: 1;
 		font-size: 16px;
-		margin: 0 5px 0 0;
+		margin: 0 0 0 5px;
 		background-size: 20px 20px;
 		background-repeat: no-repeat;
 		background-color: transparent;
